--- a/public/main.css
+++ b/public/main.css
@@ -1,35 +1,89 @@
+*{
+	padding: 0px;
+	margin: 0px;
+}
 body{
 	background-color: #F3E2A9;
 }
 
 h1{
 	text-align: center;
+	margin-top: 10px;
+}
+
+.display-none{
+	display: none;
+}
+
+.display{
+	display: inherit;
+}
+
+.display-flex{
+	display: flex;
+	flex-flow: wrap;
+	justify-content: center;
+	align-content: center;
 }
 
 #content{
 	margin: auto;
-	width: 550px;
-	max-height: 400px;
+	width: 750px;
+	max-height: 500px;
+	margin-top: 50px;
+	font-size: 1.2rem;
+}
+
+#user-register{
+	width: 600px;
+	height: 400px;
+	margin: auto;
+	background-color: black;
+}
+
+#register-span{
+	font-size: 2rem;
+	color: white;
+}
+
+#register-username{
+	border: none;
+	background-color: transparent;
+	border-bottom: 2px white solid;
+	width: 300px;
+	height: 40px;
+	margin-top: 10px;
+	color: #fff;
+	font-size: 1.2rem;
+	text-align: center;
+}
+
+#register-form button{
+	display: none;
 }
 
 #content-chat{
 	display: flex;
 	justify-content: normal;
+	border: 1px solid;
 }
 
-#chat{
-	width: 400px;
-	height: 300px;
+#chat-messages{
+	width: 600px;
+	height: 400px;
 	overflow-y: auto;
 	background-color: #ffffff;
 	padding: 10px;
 }
 
-#lobby{
-	width: 130px;
-	height: 320px;
-	background-color: aquamarine;
+#connected-users{
+	width: 120px;
+	height: 410px;
+	background-color: #BEF781;
 	overflow-y: auto;
+	padding: 5px;
+	font-size: 1.1rem;
+	border-left: 3px #378EDB solid;
 }
 
 .my-message{
@@ -49,11 +103,11 @@ h1{
 }
 
 .my-message-msj{
-	background-color: blue;
+	background-color: #A9D0F5;
 }
 
 .another-message-msj{
-	background-color: yellow;
+	background-color: #F3E2A9;
 }
 
 #chat-form button{
@@ -72,5 +126,22 @@ span[name=mensaje]{
 	width: 120px;
 }
 #input-mensaje{
-	width: 83%;
+	width: 85%;
+}
+
+#img-upload{
+	opacity: 0;
+	cursor: pointer;
+	position: absolute;
+	width: 16.75px;
+	height: 19.2px;
+}
+
+.upload-image{
+	z-index: -1;
+}
+
+.thumb{
+	width: 128px;
+	margin-right: 10px;
 }
