--- a/public/main.css
+++ b/public/main.css
@@ -9,6 +9,121 @@ body{
 h1{
 	text-align: center;
 	margin-top: 10px;
+	font-size: 48px;
+}
+
+h2{
+	text-align: center;
+	margin-top: 10px;
+	font-size: 36px;
+}
+
+li{
+	text-decoration: none;
+}
+
+.body-blur{
+  filter: blur(2px);
+}
+
+.rooms-main{
+  margin: auto;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#rooms-list{
+	margin: auto;
+	width: 400px;
+	max-height: 600px;
+	overflow-y: auto;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+.room{
+	background-color: #378EDB;
+	width: 300px;
+	height: 50px;
+	font-size: 20px;
+	border-radius: 50%;
+	margin: 15px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  cursor: pointer;
+}
+
+#create-room{
+  margin: 15px;
+  cursor: pointer;
+}
+
+#create-room span{
+  background-color: #A9D0F5;
+  border: 1px solid black;
+  padding: 5px;
+}
+
+#popup{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top:0%;
+  z-index: 9999;
+}
+
+#popup-container{
+  width: 500px;
+  height: 400px;
+  background-color: antiquewhite;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  margin-top: -200px;
+  margin-left: -250px;
+  font-size: 1.5rem;
+}
+
+.popup-title{
+  text-align: center;
+  font-weight: bold;
+  font-size: 2rem;
+  margin: 20px 0px 40px;
+}
+
+.close-button{
+  position: relative;
+  left: 86%;
+  margin: 10px;
+  font-size: 1.5rem;
+  width: 50px;
+  height: 50px;
+}
+
+.popup-input{
+  display: flex;
+  justify-content: space-between;
+  margin: 25px;
+}
+
+.popup-submit{
+  margin: 40px 0px 40px -75px;
+  font-size: 1.2rem;
+  width: 150px;
+  height: 50px;
+  background-color: goldenrod;
+  position: relative;
+  left: 50%;
+}
+
+.popup-error {
+  text-align: center;
+  color: red;
+  font-size:1.1rem;
 }
 
 .display-none{
@@ -39,11 +154,8 @@ h1{
 	height: 400px;
 	margin: auto;
 	background-color: black;
-}
-
-#register-span{
-	font-size: 2rem;
-	color: white;
+  font-size: 2rem;
+  color: white;
 }
 
 #register-username{
