--- a/public/main.css
+++ b/public/main.css
@@ -3,23 +3,30 @@
 	margin: 0px;
 }
 body{
-	background-color: #F3E2A9;
+	height: 1080px;
+	background-color: #2E2E2E;
 }
 
 h1{
 	text-align: center;
 	margin-top: 10px;
 	font-size: 48px;
+  color: #FFF;
 }
 
 h2{
 	text-align: center;
 	margin-top: 10px;
 	font-size: 36px;
+  color: #00BFFF;
 }
 
 li{
 	text-decoration: none;
+}
+
+#body{
+  height: 100%;
 }
 
 .body-blur{
@@ -27,34 +34,44 @@ li{
 }
 
 .rooms-main{
-  margin: auto;
+  margin: 20px auto;
   width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #FAFAFA;
 }
 
 #rooms-list{
-	margin: auto;
-	width: 400px;
-	max-height: 600px;
-	overflow-y: auto;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
+  margin: 30px auto;
+  width: 90%;
+  max-height: 600px;
+  overflow-y: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.border_rooms_list{
+  border: 5px #00BFFF solid;
+  border-bottom: none;
+}
+
+.border_none{
+  border: none;
 }
 
 .room{
-	background-color: #378EDB;
-	width: 300px;
-	height: 50px;
-	font-size: 20px;
-	border-radius: 50%;
-	margin: 15px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  background-color: #E6E6E6;
+  width: 100%;
+  height: 50px;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
+  padding: 10px 0px;
+  border-bottom: 5px #00BFFF solid;
 }
 
 #create-room{
@@ -86,13 +103,14 @@ li{
   margin-top: -200px;
   margin-left: -250px;
   font-size: 1.5rem;
+  border: 3px black solid;
 }
 
 .popup-title{
   text-align: center;
   font-weight: bold;
   font-size: 2rem;
-  margin: 20px 0px 40px;
+  margin: 20px 0px 20px;
 }
 
 .close-button{
@@ -111,7 +129,7 @@ li{
 }
 
 .popup-submit{
-  margin: 40px 0px 40px -75px;
+  margin: 20px 0px 20px -75px;
   font-size: 1.2rem;
   width: 150px;
   height: 50px;
@@ -136,26 +154,29 @@ li{
 
 .display-flex{
 	display: flex;
-	flex-flow: wrap;
 	justify-content: center;
 	align-content: center;
+  flex-direction: column;
 }
 
 #content{
-	margin: auto;
-	width: 750px;
-	max-height: 500px;
-	margin-top: 50px;
+	margin: 50px auto;
+	width: 60%;
 	font-size: 1.2rem;
+  background-color: #E6E6E6;
+  min-height: 80%;
+  overflow: auto;
+  padding: 10px;
 }
 
 #user-register{
 	width: 600px;
 	height: 400px;
-	margin: auto;
+	margin: 100px auto;
 	background-color: black;
   font-size: 2rem;
   color: white;
+  text-align: center;
 }
 
 #register-username{
@@ -175,6 +196,12 @@ li{
 	display: none;
 }
 
+#chat{
+  width: 80%;
+  margin: auto;
+  padding: 100px 0px;
+}
+
 #content-chat{
 	display: flex;
 	justify-content: normal;
@@ -182,7 +209,7 @@ li{
 }
 
 #chat-messages{
-	width: 600px;
+	width: 80%;
 	height: 400px;
 	overflow-y: auto;
 	background-color: #ffffff;
@@ -190,7 +217,7 @@ li{
 }
 
 #connected-users{
-	width: 120px;
+	width: 20%;
 	height: 410px;
 	background-color: #BEF781;
 	overflow-y: auto;
@@ -265,4 +292,19 @@ span[name=mensaje]{
 .thumb{
 	width: 128px;
 	margin-right: 10px;
+}
+
+#menu-flotante{
+  position: fixed;
+  right: 40px;
+  top: 110px;
+  display: flex;
+  flex-direction: column;
+}
+
+.boton-flotante{
+	width: 120px;
+	height: 60px;
+	font-size: 1.3rem;
+  margin: 10px auto;
 }
